--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -82,4 +82,5 @@ on property:twrp.all.users.decrypted=true
     stop gatekeeper-1-0
     
 on boot
+    start boot-hal-1-2
      start health-hal-2-1
