--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -7,7 +7,6 @@ on fs
     install_keyring
 
 on post-fs
-    start boot-hal-1-1
     start mtk.plpath.utils.link
 
     # Support A/B feature for EMMC and UFS boot region
@@ -39,37 +38,48 @@ service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
     oneshot
     seclabel u:r:recovery:s0
 
-service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
-    user root
-    group root
-    disabled
-    seclabel u:r:recovery:s0
-
-service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service.beanpod
-    user root
-    group root drmrpc
-    disabled
-    oneshot
-    seclabel u:r:recovery:s0
-    
-on property:hwservicemanager.ready=true
-    start keymaster-4-0
-    start gatekeeper-1-0
-   
-on property:ro.crypto.state=unsupported
-    stop teei_daemon
-    stop keymaster-4-0
-    stop gatekeeper-1-0
-    
-on property:ro.crypto.state=unencrypted
-    stop teei_daemon
-    stop keymaster-4-0
-    stop gatekeeper-1-0
-        
-on property:twrp.all.users.decrypted=true
-    stop teei_daemon
-    stop keymaster-4-0
-    stop gatekeeper-1-0
-    
-on boot
+service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service 
+     interface android.hardware.gatekeeper@1.0::IGatekeeper default 
+     user root 
+     group root 
+     disabled 
+     seclabel u:r:recovery:s0 
+  
+ service keymaster-4-1-beanpod /system/bin/android.hardware.keymaster@4.1-service.beanpod 
+     interface android.hardware.keymaster@4.0::IKeymasterDevice default 
+     interface android.hardware.keymaster@4.1::IKeymasterDevice default 
+     user root 
+     group root drmrpc 
+     oneshot     
+     disabled 
+     seclabel u:r:recovery:s0 
+  
+ service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service.beanpod 
+     user root 
+     group root drmrpc 
+     disabled 
+     oneshot 
+     seclabel u:r:recovery:s0 
+  
+ on property:hwservicemanager.ready=true 
+     start keymaster-4-0 
+     start gatekeeper-1-0 
+  
+ on property:ro.crypto.state=unsupported 
+     stop teei_daemon 
+     stop keymaster-4-0 
+     stop gatekeeper-1-0 
+  
+ on property:ro.crypto.state=unencrypted 
+     stop teei_daemon 
+     stop keymaster-4-0 
+     stop gatekeeper-1-0 
+  
+ on property:twrp.all.users.decrypted=true 
+     stop teei_daemon 
+     stop keymaster-4-0 
+     stop gatekeeper-1-0 
+  
+ on boot 
+     start boot-hal-1-1
      start health-hal-2-1
