--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@
        DEVICE_TREE_BRANCH: 
          description: 'DEVICE_TREE_BRANCH' 
          required: true 
-         default: 'ORANGEFOX' 
+         default: 'Orange-Fox' 
        DEVICE_PATH: 
          description: 'DEVICE_PATH' 
          required: true 
