--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -63,7 +63,6 @@ service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
      seclabel u:r:recovery:s0 
   
  service keymaster-4-1-beanpod /system/bin/android.hardware.keymaster@4.1-service.beanpod 
-     interface android.hardware.keymaster@4.0::IKeymasterDevice default 
      interface android.hardware.keymaster@4.1::IKeymasterDevice default 
      user root 
      group root drmrpc 
@@ -72,6 +71,7 @@ service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
      seclabel u:r:recovery:s0 
   
  service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service.beanpod 
+     interface android.hardware.keymaster@4.0-service.beanpod
      user root 
      group root drmrpc 
      disabled 
