--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -11,25 +11,8 @@ on post-fs
     symlink /dev/block/mmcblk0boot0 /dev/block/platform/bootdevice/by-name/preloader_a
     symlink /dev/block/mmcblk0boot1 /dev/block/platform/bootdevice/by-name/preloader_b
 
-        # Support A/B feature for combo emmc and ufs OTA update
-    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/platform/bootdevice/by-name/preloader_emmc_a
-    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/platform/bootdevice/by-name/preloader_emmc_b
-    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/platform/bootdevice/by-name/preloader_ufs_a
-    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/platform/bootdevice/by-name/preloader_ufs_b
-
-    # Support A/B feature for combo emmc and ufs OTA update
-    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/by-name/preloader_emmc_a
-    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/by-name/preloader_emmc_b
-    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/by-name/preloader_ufs_a
-    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/by-name/preloader_ufs_b
-
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
     start mtk.plpath.utils.link
-
-    symlink /dev/block/mapper/pl_a /dev/block/by-name/preloader_raw_a
-    symlink /dev/block/mapper/pl_b /dev/block/by-name/preloader_raw_b
-    symlink /dev/block/mapper/pl_a /dev/block/platform/bootdevice/by-name/preloader_raw_a
-    symlink /dev/block/mapper/pl_b /dev/block/platform/bootdevice/by-name/preloader_raw_b
 
 on property:ro.crypto.state=encrypted && property:ro.crypto.type=file
     install_keyring
@@ -56,14 +39,12 @@ service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
     seclabel u:r:recovery:s0
 
 service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service 
-     interface android.hardware.gatekeeper@1.0::IGatekeeper default 
      user root 
      group root 
      disabled 
      seclabel u:r:recovery:s0 
   
- service keymaster-4-1-beanpod /system/bin/android.hardware.keymaster@4.1-service.beanpod 
-     interface android.hardware.keymaster@4.1::IKeymasterDevice default 
+ service keymaster-4-1 /system/bin/android.hardware.keymaster@4.1-service.beanpod  
      user root 
      group root drmrpc 
      oneshot     
@@ -71,7 +52,6 @@ service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
      seclabel u:r:recovery:s0 
   
  service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service.beanpod 
-     interface android.hardware.keymaster@4.0-service.beanpod
      user root 
      group root drmrpc 
      disabled 
@@ -79,22 +59,26 @@ service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
      seclabel u:r:recovery:s0 
 
  on property:hwservicemanager.ready=true 
+     start keymaster-4-1
      start keymaster-4-0 
      start gatekeeper-1-0 
   
  on property:ro.crypto.state=unsupported 
      stop teei_daemon 
      stop keymaster-4-0 
+     stop keymaster-4-1
      stop gatekeeper-1-0 
   
  on property:ro.crypto.state=unencrypted 
      stop teei_daemon 
-     stop keymaster-4-0 
+     stop keymaster-4-0
+     stop keymaster-4-1
      stop gatekeeper-1-0 
   
  on property:twrp.all.users.decrypted=true 
      stop teei_daemon 
      stop keymaster-4-0 
+     stop keymaster-4-1
      stop gatekeeper-1-0 
   
  on boot 
