--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -54,25 +54,34 @@ service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
      oneshot 
      seclabel u:r:recovery:s0
 
- on property:hwservicemanager.ready=true 
-     start keymaster-4-0 
-     start gatekeeper-1-0 
+ on property:hwservicemanager.ready=true
+    write /proc/bootprof "start teei_daemon (on fs)"
+    start teei_daemon
+    write /proc/bootprof "start teei_daemon end (on fs)"
+    start keymaster-4-0
+    start gatekeeper-1-0
   
- on property:ro.crypto.state=unsupported 
-     stop teei_daemon 
-     stop keymaster-4-0 
-     stop gatekeeper-1-0 
+ on property:ro.crypto.state=unsupported
+    stop teei_daemon
+    stop keymaster-4-0
+    stop gatekeeper-1-0
+    stop servicemanager
+    stop hwservicemanager
   
- on property:ro.crypto.state=unencrypted 
-     stop teei_daemon 
-     stop keymaster-4-0
-     stop gatekeeper-1-0 
+ on property:ro.crypto.state=unencrypted
+    stop teei_daemon
+    stop keymaster-4-0
+    stop gatekeeper-1-0
+    stop servicemanager
+    stop hwservicemanager
   
- on property:twrp.all.users.decrypted=true 
-     stop teei_daemon 
-     stop keymaster-4-0 
-     stop gatekeeper-1-0 
-  
+on property:twrp.decrypt.done=true
+    stop teei_daemon
+    stop keymaster-4-0-beanpod
+    stop gatekeeper-1-0
+    stop servicemanager
+    stop hwservicemanager
+
  on boot 
      start boot-hal-1-1
      start health-hal-2-1
