--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -3,8 +3,13 @@ import /microtrust.rc
 on init
     export LD_LIBRARY_PATH /vendor/lib64:/vendor/lib64/hw:/system/lib64:/system/lib64/hw
 
+on fs
+    install_keyring
+
 on post-fs
-   
+    start boot-hal-1-1
+    start mtk.plpath.utils.link
+
     # Support A/B feature for EMMC and UFS boot region
     symlink /dev/block/sda /dev/block/mmcblk0boot0
     symlink /dev/block/sdb /dev/block/mmcblk0boot1
@@ -12,10 +17,6 @@ on post-fs
     symlink /dev/block/mmcblk0boot1 /dev/block/platform/bootdevice/by-name/preloader_b
 
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
-    start mtk.plpath.utils.link
-
-on property:ro.crypto.state=encrypted && property:ro.crypto.type=file
-    install_keyring
 
 service keystore_auth /system/bin/keystore_auth
     user system
