--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -76,11 +76,10 @@ service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
   
 on property:twrp.decrypt.done=true
     stop teei_daemon
-    stop keymaster-4-0-beanpod
+    stop keymaster-4-0
     stop gatekeeper-1-0
     stop servicemanager
     stop hwservicemanager
 
  on boot 
-     start boot-hal-1-1
      start health-hal-2-1
