--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -1,35 +1,30 @@
-import /microtrust.rc
-    
-on init
-    export LD_LIBRARY_PATH /vendor/lib64:/vendor/lib64/hw:/system/lib64:/system/lib64/hw
-
-on fs
-    install_keyring
+import /init.recovery.microtrust.rc   
 
 on post-fs
-    start boot-hal-1-1
-    start mtk.plpath.utils.link
-
     # Support A/B feature for EMMC and UFS boot region
+    wait /dev/block/mmcblk0boot0 2
     symlink /dev/block/sda /dev/block/mmcblk0boot0
     symlink /dev/block/sdb /dev/block/mmcblk0boot1
     symlink /dev/block/mmcblk0boot0 /dev/block/platform/bootdevice/by-name/preloader_a
     symlink /dev/block/mmcblk0boot1 /dev/block/platform/bootdevice/by-name/preloader_b
 
+    # Support A/B feature for combo emmc and ufs OTA update
+    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/platform/bootdevice/by-name/preloader_emmc_a
+    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/platform/bootdevice/by-name/preloader_emmc_b
+    symlink /dev/block/platform/bootdevice/by-name/preloader_a /dev/block/platform/bootdevice/by-name/preloader_ufs_a
+    symlink /dev/block/platform/bootdevice/by-name/preloader_b /dev/block/platform/bootdevice/by-name/preloader_ufs_b
+
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
+    start mtk.plpath.utils.link
 
-service keystore_auth /system/bin/keystore_auth
-    user system
-    group root
-    disabled
-    oneshot
-    seclabel u:r:recovery:s0
+    # Start Boot HAL
+    start boot-hal-1-1
 
-service keystore /system/bin/keystore /tmp/misc/keystore
-    user root
-    group root drmrpc readproc log
-    disabled
-    seclabel u:r:recovery:s0
+on init
+    export LD_LIBRARY_PATH /vendor/lib64:/vendor/lib64/hw:/system/lib64:/system/lib64/hw
+
+on fs
+    install_keyring
 
 service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
     class main
@@ -39,47 +34,55 @@ service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
     oneshot
     seclabel u:r:recovery:s0
 
-service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service 
-     interface android.hardware.gatekeeper@1.0::IGatekeeper default 
-     user root 
-     group root 
-     disabled 
-     seclabel u:r:recovery:s0 
-  
- service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service.beanpod 
-     interface android.hardware.keymaster@4.0::IKeymasterDevice default 
-     interface android.hardware.keymaster@4.1::IKeymasterDevice default 
-     user root 
-     group root drmrpc 
-     disabled 
-     oneshot 
-     seclabel u:r:recovery:s0
+service keystore_auth /system/bin/keystore_auth
+    oneshot
+    user system
+    group root
+    disabled
+    seclabel u:r:recovery:s0
 
- on property:hwservicemanager.ready=true
-    start teei_daemon
+service keystore /system/bin/keystore /tmp/misc/keystore
+    user root
+    group root drmrpc readproc log
+    disabled
+    seclabel u:r:recovery:s0
+
+service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
+    user root
+    group root
+    disabled
+    seclabel u:r:recovery:s0
+
+service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service.beanpod
+    user root
+    group root drmrpc
+    disabled
+    oneshot
+    seclabel u:r:recovery:s0
+
+on property:crypto.ready=1
+    start keymaster-4-0
+
+on property:hwservicemanager.ready=true
     start keymaster-4-0
     start gatekeeper-1-0
-  
- on property:ro.crypto.state=unsupported
+
+on property:ro.crypto.state=unsupported
     stop teei_daemon
     stop keymaster-4-0
     stop gatekeeper-1-0
-    stop servicemanager
-    stop hwservicemanager
-  
- on property:ro.crypto.state=unencrypted
+
+on property:ro.crypto.state=unencrypted
     stop teei_daemon
     stop keymaster-4-0
     stop gatekeeper-1-0
-    stop servicemanager
-    stop hwservicemanager
-  
+
 on property:twrp.decrypt.done=true
     stop teei_daemon
     stop keymaster-4-0
     stop gatekeeper-1-0
-    stop servicemanager
-    stop hwservicemanager
 
- on boot 
-     start health-hal-2-1
+on boot
+    start health-hal-2-1
+
+
