--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -1,5 +1,8 @@
 import /init.recovery.microtrust.rc   
 
+on init
+    export LD_LIBRARY_PATH /vendor/lib64:/vendor/lib64/hw:/system/lib64:/system/lib64/hw
+
 on post-fs
     # Support A/B feature for EMMC and UFS boot region
     wait /dev/block/mmcblk0boot0 2
@@ -17,13 +20,7 @@ on post-fs
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
     start mtk.plpath.utils.link
 
-    # Start Boot HAL
-    start boot-hal-1-1
-
-on init
-    export LD_LIBRARY_PATH /vendor/lib64:/vendor/lib64/hw:/system/lib64:/system/lib64/hw
-
-on fs
+on property:ro.crypto.state=encrypted && property:ro.crypto.type=file
     install_keyring
 
 service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
@@ -34,55 +31,44 @@ service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
     oneshot
     seclabel u:r:recovery:s0
 
-service keystore_auth /system/bin/keystore_auth
-    oneshot
-    user system
-    group root
-    disabled
-    seclabel u:r:recovery:s0
-
-service keystore /system/bin/keystore /tmp/misc/keystore
-    user root
-    group root drmrpc readproc log
-    disabled
-    seclabel u:r:recovery:s0
-
 service gatekeeper-1-0 /system/bin/android.hardware.gatekeeper@1.0-service
+    interface android.hardware.gatekeeper@1.0::IGatekeeper default
     user root
     group root
     disabled
     seclabel u:r:recovery:s0
 
 service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service.beanpod
+    interface android.hardware.keymaster@4.0::IKeymasterDevice default
+    interface android.hardware.keymaster@4.1::IKeymasterDevice default
     user root
     group root drmrpc
-    disabled
     oneshot
+    disabled
     seclabel u:r:recovery:s0
 
-on property:crypto.ready=1
-    start keymaster-4-0
-
-on property:hwservicemanager.ready=true
-    start keymaster-4-0
+on property:vendor.sys.listener.registered=true
+    start teei_daemon
     start gatekeeper-1-0
-
+    start keymaster-4-1
+   
 on property:ro.crypto.state=unsupported
     stop teei_daemon
-    stop keymaster-4-0
+    stop keymaster-4-1
     stop gatekeeper-1-0
 
 on property:ro.crypto.state=unencrypted
     stop teei_daemon
-    stop keymaster-4-0
+    stop keymaster-4-1
     stop gatekeeper-1-0
 
-on property:twrp.decrypt.done=true
+on property:twrp.all.users.decrypted=true
     stop teei_daemon
-    stop keymaster-4-0
+    stop keymaster-4-1
     stop gatekeeper-1-0
-
+    
 on boot
+    start boot-hal-1-2
     start health-hal-2-1
 
 
