--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@
        MAKEFILE_NAME: 
          description: 'MAKEFILE_NAME' 
          required: true 
-         default: 'omni_selene' 
+         default: 'twrp_selene' 
        BUILD_TARGET: 
          description: 'BUILD_TARGET' 
          required: true 
