--- a/recovery/root/init.recovery.mt6768.rc
+++ b/recovery/root/init.recovery.mt6768.rc
@@ -1,34 +1,29 @@
 import /microtrust.rc
-    
+
 on init
-    export LD_LIBRARY_PATH /vendor/lib64:/vendor/lib64/hw:/system/lib64:/system/lib64/hw
- 
-on fs
-    install_keyring
+    export LD_LIBRARY_PATH /system/lib64:/vendor/lib64:/vendor/lib64/hw:/system/lib64/hw
 
 on post-fs
-    start boot-hal-1-1
-    start mtk.plpath.utils.link
-
     # Support A/B feature for EMMC and UFS boot region
+    wait /dev/block/mmcblk0boot0 2
     symlink /dev/block/sda /dev/block/mmcblk0boot0
     symlink /dev/block/sdb /dev/block/mmcblk0boot1
     symlink /dev/block/mmcblk0boot0 /dev/block/platform/bootdevice/by-name/preloader_a
     symlink /dev/block/mmcblk0boot1 /dev/block/platform/bootdevice/by-name/preloader_b
+    symlink /dev/block/mmcblk0boot0 /dev/block/by-name/preloader_a
+    symlink /dev/block/mmcblk0boot1 /dev/block/by-name/preloader_b
 
     exec u:r:update_engine:s0 root root -- /system/bin/mtk_plpath_utils
-    
-service keystore_auth /system/bin/keystore_auth
-    user system
+    start mtk.plpath.utils.link
+
+on property:ro.crypto.state=encrypted && property:ro.crypto.type=file
+    install_keyring
+
+service variant-script /system/bin/variant-script.sh
+    user root
     group root
     disabled
     oneshot
-    seclabel u:r:recovery:s0
-
-service keystore /system/bin/keystore /tmp/misc/keystore
-    user root
-    group root drmrpc readproc log
-    disabled
     seclabel u:r:recovery:s0
 
 service mtk.plpath.utils.link /system/bin/mtk_plpath_utils
@@ -55,32 +50,25 @@ service keymaster-4-1-beanpod /system/bin/android.hardware.keymaster@4.1-service
     disabled
     seclabel u:r:recovery:s0
 
-service keymaster-4-0 /system/bin/android.hardware.keymaster@4.0-service.beanpod
-    user root
-    group root drmrpc
-    disabled
-    oneshot
-    seclabel u:r:recovery:s0
-    
-on property:hwservicemanager.ready=true
-    start keymaster-4-0
+on property:vendor.sys.listener.registered=true
     start gatekeeper-1-0
+    start keymaster-4-1-beanpod 
    
 on property:ro.crypto.state=unsupported
     stop teei_daemon
-    stop keymaster-4-0
+    stop keymaster-4-1-beanpod 
     stop gatekeeper-1-0
     
 on property:ro.crypto.state=unencrypted
-    stop teei_daemon
-    stop keymaster-4-0
+    stop teei_daemon    
+    stop keymaster-4-1-beanpod 
     stop gatekeeper-1-0
         
 on property:twrp.all.users.decrypted=true
     stop teei_daemon
-    stop keymaster-4-0
+    stop keymaster-4-1-beanpod 
     stop gatekeeper-1-0
-    
+
 on boot
     start boot-hal-1-2
-     start health-hal-2-1
+    start health-hal-2-1
